--- a/style/style.css
+++ b/style/style.css
@@ -13,10 +13,14 @@
     border: none;
     cursor: pointer;
 }
+.side-button{
+    margin-top: 5px;
+    color: #F1F1F3;
+}
 .sahre-btn:hover, .sahre-btn a:hover {
     background-color: rgb(78, 177, 152);
     transition: 0.9s;
-    color: rgb(14, 15, 15);
+    color: rgb(183, 233, 233);
 } 
 .sahre-btn a {
     text-decoration: none;
@@ -323,4 +327,71 @@ select {
     border-radius: 4px;
     text-align: center;
     align-items: center;
+}
+
+/* newa section */
+ .new-satelite{
+    max-width: 95%;
+    margin: auto;
+    padding: 50px;
+ }
+ .new-satelite h2{
+    color: rgb(14, 14, 14);
+    font-size: 35px;
+    font-weight: 700;
+    margin: 16px 0;
+    
+ }
+ .new-satelite .news-dis{
+    color:rgb(14, 14, 14, 0.7);
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 28px;
+    margin: 18px 0;
+}
+.aljajera-box{
+    margin-top: 32px;
+    /* max-width: 100%;
+    height: 100%; */
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
+    
+}
+.aljajeera-1{
+    display: flex;
+    /* flex-direction: row;
+    justify-content: flex-start; */
+    /* align-items: center; */
+    /* padding: 28px 28px; */
+    gap: 32px;
+    border-radius: 25px;
+    background-color: #ffff;
+}
+.aljajera-left .img-property{
+    /* height: 220px;
+    width: 340px; */
+    align-items: center;
+    padding: 22px;
+    margin-left: 5px;
+    border-radius: 45px;
+}
+.aljareera-right{
+  padding: 28px;
+}
+.aljareera-right h1{
+    color: rgb(14, 14, 14, 0.8);
+    font-size: 30px;
+    font-weight: 700;
+    
+}
+.aljareera-right img{
+    margin: 10px 0;
+}
+.aljareera-right p{
+    margin: 15px 0;
+    color: rgb(14, 14, 14, 0.7);
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
 }
