--- a/style/style.css
+++ b/style/style.css
@@ -472,3 +472,62 @@ select {
     font-weight: 400;
     color: rgb(14, 14, 14, 0.7);
 }
+.subscribe{
+    max-width: 94%;
+    min-height: 350px;
+    border-radius: 16px;
+    background-color: rgb(183, 228, 214);
+    margin: auto;
+    margin-bottom: 50px;
+}
+.subcribe-section{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 80px 100px;
+    gap: 60px;
+}
+.newslatter{
+    width: 100%;
+    text-align: center;
+    align-items: center;
+}
+.newslatter h1{
+    color: rgb(14, 14, 14);
+    font-size: 46px;
+    font-weight: 700;
+    margin: 14px 0;
+}
+.newslatter p{
+    color: rgb(14, 14, 14, 0.7);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25px;
+    margin: 25px;
+}
+.info{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 0;
+   
+}
+.info input{
+    padding: 28px;
+    width: 50%;
+    box-sizing: border-box;
+    border: none;
+    /* border: 1px solid rgb(198, 228, 214); */
+   
+}
+.info button{
+    padding: 28px 35px;
+    border: none;
+    background-color: rgb(0, 106, 80);
+    color: #fff;
+    font-size: 13px;
+    font-weight: 700;
+    /* border: 3px solid aqua; */
+}
