--- a/style/style.css
+++ b/style/style.css
@@ -242,7 +242,38 @@ main{
     align-items: center;
     background-color: rgb(84, 144, 245);
     border-radius: 6px;
+    transition: 0.9s;
 }
+.btn1:hover{
+    background-color: rgb(112, 148, 211);
+}
+.btn2{
+    padding: 8px 18px;
+    margin: 12px 0;
+    border: none;
+    text-align: center;
+    align-items: center;
+    background-color: rgb(9, 161, 92);
+    border-radius: 6px;
+    transition: 0.9s;
+}
+.btn2:hover{
+    background-color: rgb(87, 163, 129);
+}
+.btn3{
+    padding: 8px 18px;
+    margin: 12px 0;
+    border: none;
+    text-align: center;
+    align-items: center;
+    background-color: rgb(255, 194, 57);
+    border-radius: 6px;
+    transition: 0.9s;
+}
+.btn3:hover{
+    background-color: rgb(224, 197, 132);
+}
+
 .mani a{
     text-decoration: none;
     color: #F1F1F3;
@@ -504,7 +535,7 @@ select {
     font-size: 16px;
     font-weight: 400;
     line-height: 25px;
-    margin: 25px;
+    margin: 28px;
 }
 .info{
     display: flex;
@@ -519,6 +550,7 @@ select {
     width: 50%;
     box-sizing: border-box;
     border: none;
+    border-radius: 8px 0 0 8px;
     /* border: 1px solid rgb(198, 228, 214); */
    
 }
@@ -528,6 +560,40 @@ select {
     background-color: rgb(0, 106, 80);
     color: #fff;
     font-size: 13px;
+    border-radius: 0 8px 8px 0;
     font-weight: 700;
     /* border: 3px solid aqua; */
+}
+
+
+
+
+footer{
+    background-color: rgb(255, 255, 255);
+    /* height: 320px; */
+    padding: 30px 100px;
+
+}
+.foot-section{
+    width: 80%;
+    margin: auto;
+    
+}
+.feta{
+   text-align: center;
+   /* padding: 30px 130px; */
+}
+.footer-h1{
+    padding: 30px;
+    color: rgb(14, 14, 14, 0.8);
+    font-size: 21px;
+    font-weight: 800;
+}
+
+.fotter-icon{
+    padding: 30px;
+}
+.fotter-icon a img{
+    margin: 25px;
+    
 }
